Bug 352262 - KGet does not add a download immediately
Summary: KGet does not add a download immediately
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-04 12:28 UTC by Lastique
Modified: 2020-12-15 09:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lastique 2015-09-04 12:28:00 UTC
When I add a download by clicking a link in Firefox, KGet allows me to choose where to store the downloaded file, but when I click OK it doesn't add the download to the queue immediately if there is another download going. The new download doesn't even appear in the list of downloads for quite some time. It may appear and start downloading later though (many minutes later, I'm not sure what triggers it). The existing download doesn't seem to prevent the new downloads from being added as the new download may appear in the list before the existing download finishes.

This basically breaks concurrent downloads as new downloads don't start immediately.

Reproducible: Always

Steps to Reproduce:
1. Add some long running download to KGet, make sure it's started.
2. Add another download. I'm doing it with Firefox with FlashGot addon configured to use KGet.
3. Select the target directory for the new download and press OK.

Actual Results:  
The new download does not appear in the downloads list. Apparently, it doesn't start either because when it does appear it starts from 0%.

Expected Results:  
The new download should appear in the list immediately and start downloading, as long as this is allowed by the number of concurrent downloads in the settings.

KGet 2.14.6.
Comment 1 Lastique 2015-09-04 12:35:15 UTC
I'll add that I'm using KGet for FTP/HTTP downloads only.
Comment 2 Unknown 2018-06-25 11:11:05 UTC
I can reproduce this problem too. I'm using KGet 18.4.2 on a Gentoo Linux system.
Comment 3 Justin Zobel 2020-11-24 02:29:07 UTC
Confirmed on 20.08.3
Comment 4 vital.systm 2020-12-15 09:30:17 UTC
Git commit 25d57cad8166151845b36ed90870a0eaf8cfaf03 by Yuri Vital.
Committed on 14/12/2020 at 07:55.
Pushed by meven into branch 'master'.

Transfers are created stopped by default.

TransferData constructor accept started state as an implicit agrument.
When not specified, the default value is false.
So set explicitly to true in calling functions and let the scheduler apply connections limits.

M  +2    -2    ui/newtransferdialog.cpp

https://invent.kde.org/network/kget/commit/25d57cad8166151845b36ed90870a0eaf8cfaf03