Transfers are created stopped by default.

TransferData constructor accept started state as an implicit agrument.
When not specified, the default value is false.
So set explicitly to true in calling functions and let the scheduler apply connections limits.

BUG: 352262